force-app/main/default/objects/Endoso_de_Fianza__c/Endoso_de_Fianza__c.object-meta.xml
<CustomObject>
    <description>Endoso individual a una fianza. Hijo Master-Detail de Fianza.</description>
    <label>Endoso de Fianza</label>
    <nameField>
        <displayFormat>END-{00000}</displayFormat>
        <label>Numero de endoso</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Endosos de Fianza</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>