force-app/main/default/objects/Endoso_de_Fianza__c/fields/Convenio_Modificatorio__c.field-meta.xml
<CustomField>
    <fullName>Convenio_Modificatorio__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Convenio Modificatorio</label>
    <referenceTo>Convenio_Modificatorio__c</referenceTo>
    <relationshipLabel>Endosos de fianza (del convenio)</relationshipLabel>
    <relationshipName>EndososDeFianzaDelConvenio</relationshipName>
    <type>Lookup</type>
</CustomField>