force-app/main/default/objects/Endoso_de_Fianza__c/fields/Fecha_Efectiva__c.field-meta.xml
<CustomField>
    <fullName>Fecha_Efectiva__c</fullName>
    <label>Fecha efectiva</label>
    <type>Date</type>
</CustomField>