force-app/main/default/objects/Endoso_de_Fianza__c/fields/Fianza__c.field-meta.xml
<CustomField>
    <fullName>Fianza__c</fullName>
    <label>Fianza</label>
    <referenceTo>Fianza__c</referenceTo>
    <relationshipLabel>Endosos de fianza</relationshipLabel>
    <relationshipName>EndososDeFianza</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>