force-app/main/default/objects/Endoso_de_Fianza__c/fields/Motivo_Observaciones__c.field-meta.xml
<CustomField>
    <fullName>Motivo_Observaciones__c</fullName>
    <label>Motivo / Observaciones</label>
    <length>10000</length>
    <type>LongTextArea</type>
</CustomField>