force-app/main/default/objects/Endoso_de_Fianza__c/fields/Nueva_Fecha_Vencimiento__c.field-meta.xml
<CustomField>
    <fullName>Nueva_Fecha_Vencimiento__c</fullName>
    <label>Nueva fecha de vencimiento</label>
    <type>Date</type>
</CustomField>