force-app/main/default/objects/Endoso_de_Fianza__c/fields/Nueva_Prima__c.field-meta.xml
<CustomField>
    <fullName>Nueva_Prima__c</fullName>
    <label>Nueva prima</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>