force-app/main/default/objects/Endoso_de_Fianza__c/fields/Nuevo_Monto_Afianzado__c.field-meta.xml
<CustomField>
    <fullName>Nuevo_Monto_Afianzado__c</fullName>
    <label>Nuevo monto afianzado</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>