force-app/main/default/objects/Endoso_de_Fianza__c/fields/Tipo_Endoso__c.field-meta.xml
<CustomField>
    <fullName>Tipo_Endoso__c</fullName>
    <label>Tipo de endoso</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Aumento de monto</fullName>
            </value>
            <value>
                <fullName>Reduccion de monto</fullName>
            </value>
            <value>
                <fullName>Extension de vigencia</fullName>
            </value>
            <value>
                <fullName>Cambio de prima</fullName>
            </value>
            <value>
                <fullName>Cambio de datos</fullName>
            </value>
            <value>
                <fullName>Cancelacion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>