force-app/main/default/objects/Endoso_de_Fianza__c/validationRules/Endoso_Monto_Positivo.validationRule-meta.xml
<ValidationRule>
    <fullName>Endoso_Monto_Positivo</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(Nuevo_Monto_Afianzado__c)), Nuevo_Monto_Afianzado__c &lt;= 0)</errorConditionFormula>
    <errorMessage>El nuevo monto afianzado debe ser mayor a cero.</errorMessage>
</ValidationRule>