force-app/main/default/objects/Endoso_de_Fianza__c/validationRules/Endoso_Prima_No_Negativa.validationRule-meta.xml
<ValidationRule>
    <fullName>Endoso_Prima_No_Negativa</fullName>
    <active>true</active>
    <errorConditionFormula>AND(NOT(ISBLANK(Nueva_Prima__c)), Nueva_Prima__c &lt; 0)</errorConditionFormula>
    <errorMessage>La prima no puede ser negativa.</errorMessage>
</ValidationRule>